--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=jwt-authentication-backend
+spring.application.name=jwt-application
+spring.datasource.url=jdbc:mysql://localhost:3306/jwtdb
+spring.datasource.username=root
+spring.datasource.password=Raviteja@1968
+spring.jpa.hibernate.ddl-auto=update
